--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -762,6 +762,7 @@
   position: relative;
   min-height: 48px;
   border-bottom: 1px solid lighten($ui-base-color, 8%);
+  overflow: visible;
   cursor: default;
 
   @supports (-ms-overflow-style: -ms-autohiding-scrollbar) {
@@ -4290,6 +4291,9 @@ a.status-card {
   border-radius: 4px;
   position: relative;
   width: 100%;
+  display: flex;
+  // flex-wrap: wrap;
+  flex-direction: column;
 }
 
 .media-gallery__item {
